footer spacing fixes

--- a/css/screen.css
+++ b/css/screen.css
@@ -4006,6 +4006,15 @@ body footer .quicklinks .title {
     padding-right: 5%;
   }
 }
+@media (max-width: 1400px) {
+  body footer .quicklinks ul div.title {
+    font-size: 1em;
+    margin-right: 20px;
+  }
+  body footer .quicklinks ul li {
+    font-size: 0.9em;
+  }
+}
 @media (max-width: 1224px) {
   body footer .quicklinks {
     -webkit-flex-wrap: wrap;
@@ -4019,12 +4028,16 @@ body footer .quicklinks .title {
         -ms-flex: 1 1 30%;
             flex: 1 1 30%;
     margin-right: 20px;
+    margin-bottom: 20px;
+  }
+  body footer .quicklinks ul div.title {
+    font-size: 1.2em;
+  }
+  body footer .quicklinks ul li {
+    font-size: 1em;
   }
 }
 @media (max-width: 860px) {
-  body footer .quicklinks ul {
-    margin-bottom: 20px;
-  }
   body footer p {
     -webkit-box-flex: 1;
     -webkit-flex: 1 1 100%;
